--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,6 +45,9 @@ repositories {
     google()
     jcenter()
     mavenCentral()
+    maven {
+        url 'https://jitpack.io'
+    }
 }
 
 
@@ -55,4 +58,7 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+
+    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
+    implementation "com.github.pedroSG94.rtmp-rtsp-stream-client-java:rtplibrary:2.1.7"
 }
