--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.webmons.plugins.capacitorrtmprtspstream">
+    package="me.disono.capacitor.rtsp.rtmp.stream">
+    <!-- Permission under capacitor -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- Optional for play store -->
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
+    <application>
+        <activity android:name="me.disono.capacitor.rtsp.rtmp.stream.CapacitorRtmpActivity" />
+        <activity android:name="me.disono.capacitor.rtsp.rtmp.stream.CapacitorRtspActivity" />
+    </application>
 </manifest>
